# django-torrent-stream

./: .docker.env  Dockerfile  Makefile  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
core/: settings.py  urls.py
